--- a/contig_lengths.Rmd
+++ b/contig_lengths.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Contig Lengths"
-output: html_document
+output: html_notebook
 ---
 
 ```{r setup, include=FALSE}
@@ -18,7 +18,7 @@ total_genome_size <- 4009599824.0
 contig_lengths <- read_table2("assembly_data/hmac_dovetail_assembly.lengths.txt", col_names = c("Contig","Length")) %>% 
   mutate(GenomeSize=cumsum(as.numeric(Length))) %>% 
   mutate(GenomeProportion=GenomeSize/total_genome_size) %>% 
-  add_column(rank=1:nrow(contig_lengths))
+  add_column(rank=1:nrow(.))
 ```
 
 A histogram of contig lengths reveals that the vast majority are small
@@ -33,13 +33,10 @@ Plot cumulative genome size against a sorted list of contigs.  This helps think 
 ggplot(contig_lengths,aes(x=as.numeric(rank),y=GenomeProportion)) + geom_line() 
 ```
 
-```{r}
-contig_lengths %>% filter(GenomeProportion>0.96) %>% count()
-```
-How much of the genome would we lose by removing contigs less than 50kb in size?.  This would remove about 5% of the assembly contained within 32342 contigs.
+How much of the genome would we lose by removing contigs less than 20kb in size?.  This would remove about 2.5% of the assembly contained within 32342 contigs.
 
 ```{r}
-cut_off <- 50000
+cut_off <- 20000
 100*(contig_lengths %>% filter(Length<cut_off) %>% pull(Length) %>% sum())/total_genome_size
 
 contig_lengths %>% filter(Length<cut_off) %>% count()
